@@ -1,0 +1,13 @@
+#ifndef FANCONFIG_H
+#define FANCONFIG_H
+
+struct FanConfig
+{
+    QString name;
+    QString format;
+    QString value;
+    QString highFormat;
+    QString highValue;
+};
+
+#endif // FANCONFIG_H
